feat: 实现懒加载

--- a/client/Editor/Canvas/style.less
+++ b/client/Editor/Canvas/style.less
@@ -1,7 +1,7 @@
 .editor-canvas {
   height: 100%;
   width: 100%;
-  background: -webkit-linear-gradient(top, transparent 29px, gray 30px),
-    -webkit-linear-gradient(left, transparent 29px, gray 30px);
+  background: -webkit-linear-gradient(top, transparent 29px, #ECECEC 30px),
+    -webkit-linear-gradient(left, transparent 29px, #ECECEC 30px);
   background-size: 30px 30px;
 }
